fixed layout issues

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -56,7 +56,7 @@ $bp-small: 37.5em;
     border-radius: 0.2rem;
     @media only screen and (max-width: $bp-medium) {
       font-size: 2rem;
-      width: 40%;
+      // width: 40%;
     }
   }
   input:focus-visible {
